--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ CMakeFiles/*
 cmake-build-debug/*
 .idea/*
 .kdev4/*
+.idea/
+CMakeFiles/
+build/
+cmake-build-debug/
+/cmake_install.cmake
+/CMakeCache.txt
+/jetshow
+/jetshow.cbp
+/Makefile
+/compile_commands.json
