--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
     "observation":
     {
         "frequency_ghz" : 5.0,
-        "los_angle" : 0.3,
+        "los_angle" : 0.1,
         "redshift" : 0.1
     },
     "image":
     {
-        "number_of_pixels" : 200,
-        "pixel_size_mas" : 0.05
+        "number_of_pixels" : 800,
+        "pixel_size_mas" : 0.02
     },
     "jet":
     {
@@ -17,17 +17,18 @@
             "type" : "cone",
             "parameters" :
             {
-                "angle" : 0.2,
+                "angle" : 0.05,
                 "scale_pc" : 1000.0
             }
         },
         "bfield":
         {
-            "type" : "radial_conical",
+            "type" : "spiral_conical",
             "parameters" :
             {
-                "b_1" : 0.1,
-                "n_b" : 2.0
+                "b_1" : 1.0,
+                "n_b" : 1.5,
+                "pitch_angle" : 1.0
             }
         },
         "vfield":
@@ -43,8 +44,8 @@
             "type" : "bk",
             "parameters" :
             {
-                "n_1" : 500000.0,
-                "n_n" : 2.0
+                "n_1" : 5000.0,
+                "n_n" : 1.65
             }
         }
     },
@@ -52,7 +53,13 @@
     {
         "tau_max" : 100.0,
         "dl_max_pc" : 0.01,
-        "log10_tau_min" : -15.0,
+        "log10_tau_min" : -10.0,
         "n" : 100
+    },
+    "output" :
+    {
+        "file_tau" : "map_tau.txt",
+        "file_length" : "map_l.txt",
+        "file_i" : "map_i.txt"
     }
 }
