--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
     "observation":
     {
-        "frequency_ghz" : 5.0,
-        "los_angle" : 0.1,
-        "redshift" : 0.1
+        "frequency_ghz" : 15.0,
+        "los_angle" : 0.07,
+        "redshift" : 0.5
     },
     "image":
     {
-        "number_of_pixels" : 200,
-        "pixel_size_mas" : 0.02
+        "number_of_pixels" : 500,
+        "pixel_size_mas" : 0.002
     },
     "jet":
     {
@@ -17,17 +17,17 @@
             "type" : "cone",
             "parameters" :
             {
-                "angle" : 0.025,
+                "angle" : 0.0175,
                 "scale_pc" : 1000.0
             }
         },
         "bfield":
         {
-            "type" : "spiral_conical",
+            "type" : "radial_conical",
             "parameters" :
             {
                 "b_1" : 1.0,
-                "n_b" : 1.5,
+                "n_b" : 1.0,
                 "random_fraction" : 0.0,
                 "model_of_randomness" : "point",
                 "n_cells_1pc" : 100,
@@ -47,8 +47,8 @@
             "type" : "bk",
             "parameters" :
             {
-                "n_1" : 5000.0,
-                "n_n" : 1.65
+                "n_1" : 500.0,
+                "n_n" : 2.0
             }
         }
     },
@@ -65,9 +65,9 @@
             "tau_n_min" : 0.1,
             "n_tau_max" : 1000,
             "log10_abs_error_tau" : -3.0,
-            "log10_rel_error_tau" : -3.0,
-            "log10_abs_error_I" : -3.0,
-            "log10_rel_error_I" : -3.0
+            "log10_rel_error_tau" : -5.0,
+            "log10_abs_error_I" : -9.0,
+            "log10_rel_error_I" : -4.0
         }
 
     },
