using pipelines only for master

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,8 @@
 image: ubuntu:rolling
 
 pipelines:
-  default:
+  branches:
+  master:
     - step:
         script:
           - apt-get update -qq
